# accel-snn

./: .gitignore  README.md  pyproject.toml  scratch.ipynb  scratch.py
src/accelsnn/: utils.py
